fix(ux): sometimes hamburger not responding on mobile

--- a/src/main/frontend/components/sidebar.css
+++ b/src/main/frontend/components/sidebar.css
@@ -287,7 +287,7 @@
   top: var(--ls-headbar-inner-top-padding);
   left: 0;
   z-index: var(--ls-z-index-level-5);
-  transition: width 1.2s;
+  transition: width .5s;
 
   a {
     color: var(--ls-primary-text-color);
